--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT=3000
+
+MONGODB_CNN=mongodb+srv://user_node_cafe:Modulo12_@cluster0.xmiee.mongodb.net/cafeDB
+USER=user_node_cafe
+PASS=Modulo12_
+SECRETORPRIVATEKEY=Esto03MySecretkey@1342
