--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ MONGODB_CNN=mongodb+srv://user_node_cafe:Modulo12_@cluster0.xmiee.mongodb.net/ca
 USER=user_node_cafe
 PASS=Modulo12_
 SECRETORPRIVATEKEY=Esto03MySecretkey@1342
+
+GOOGLE_CLIENT_ID=116719186831-49utnngm281daca7djks4k6vl3aq390o.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
