--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +15,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
+    "google-auth-library": "^7.14.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.13",
-    "nodemon": "^2.0.7"
+    "mongoose": "^5.12.13"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
