--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ SECRETORPRIVATEKEY=Esto03MySecretkey@1342
 
 GOOGLE_CLIENT_ID=116719186831-49utnngm281daca7djks4k6vl3aq390o.apps.googleusercontent.com
 GOOGLE_SECRET_ID=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
+
+CLOUDINARY_URL=cloudinary://433467534726428:tCQQfAyc_t2G69rKcqLgjlD_gY4@dyc3mdlyj
