--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js"
-    "build": "run build"
+    "build": "build"
   },
   "keywords": [],
   "author": "",
